--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "preline": "^1.9.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.8.1",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
